# genimage

./: .clang-format  .gitignore  .travis.yml  Makefile  Makefile.am  README  README.rst  autogen.sh  config.c  configure.ac  crc32.c  flash.conf  genimage.c  genimage.h  image-android-sparse.c  image-btrfs.c  image-cpio.c  image-cramfs.c  image-custom.c  image-erofs.c  image-ext2.c  image-f2fs.c  image-file.c  image-fip.c  image-fit.c  image-flash.c  image-hd.c  image-iso.c  image-jffs2.c  image-mdraid.c  image-qemu.c  image-rauc.c  image-squashfs.c  image-tar.c  image-ubi.c  image-ubifs.c  image-verity.c  image-vfat.c  list.h  random32.c  (+2 more)
.github/workflows/: codeql.yml  format.yml  tests.yml
m4/: attributes.m4
test/: basic-images.test  btrfs.config  cpio.config  cramfs.config  custom.config  erofs.config  erofs.dump  erofs.dump.new  erofs.dump.old  erofs.new.config  exec-check.sh  exec-fail.config  exec.config  ext.test  ext2.config  ext2percent.config  ext2test-percent.1.dump  ext2test-percent.2.dump  ext2test-percent.dump  ext2test.1.dump  ext2test.2.dump  ext2test.dump  ext3.config  ext3test.0.dump  ext3test.1.dump  ext3test.2.dump  ext3test.dump  ext4.config  ext4test.0.dump  ext4test.1.dump  ext4test.2.dump  ext4test.dump  f2fs.config  filesystem.test  fip-size.config  fip.config  fit.config  fit.its  flash-fill.config  flash-fill.md5  (+84 more)
test/include/aaa/: include-test.config
test/include/bbb/: include-test.config
test/rauc-openssl-ca/: ca.cert.pem  rauc.key.pem
test/signing-ca/: signing.cert.pem
